# napcat-cli

./: .gitignore  .gitmodules  AGENTS.md  AGENT_EVAL_BAD_CASES.md  README.md  STATIC_ANALYSIS.md  config.py  napcat  persona.md  pyproject.toml  skills-fs-config.json  skills-fs-fragment.json  test_phone_tui.py
.github/workflows/: release.yml
daemon/: __init__.py  schemas.py  watch.py
docs/: HERMES_WAKE.md
lib/: __init__.py  api.py  config.py  events.py  events_sqlite.py
napcat-cli-fs/: pyproject.toml
napcat-cli-fs/scripts/: build-wheel.py
napcat-cli-fs/src/napcat_cli_fs/: __init__.py
napcat_cli/: __init__.py  cli.py  setup_wizard.py  wake.py  wake_backend.py  wake_orchestrator.py  wake_presets.py
napcat_cli/daemon/: schemas.py  watch.py
napcat_cli/data/: SKILL.md  skills-fs-fragment.json
napcat_cli/data/references/: mounting.md
napcat_cli/data/skills-fs.d/: agents-friend-time.md  agents-friend.md  agents-friends.md  agents-group-time.md  agents-group.md  agents-groups.md  agents-napcat.md  skill-agents.md  skill-body.md
napcat_cli/lib/: api.py  config.py  events.py  events_sqlite.py  message.py  ocr.py
napcat_cli/tui/: __init__.py  api.py  app.py  chat_list.py  chat_view.py  slash_command.py  styles.tcss
tests/: conftest.py  test_agent_commands.py  test_agent_eval.py  test_config.py  test_fs.py  test_lint.py  test_setup.py  test_wake.py  test_wake_backend.py  test_wake_orchestrator.py  test_watch_dm.py
tools/: agents-md.json  gen_mounts.py
tui/: __main__.py  api.py  app.py  chat_list.py  chat_view.py  slash_command.py  styles.tcss
