[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "napcat-cli"
version = "2.0.0"
description = "Standalone CLI and daemon for NapCat QQ bot management with skills-fs integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["textual>=0.40"]

[project.scripts]
napcat = "napcat_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["napcat_cli"]

[tool.hatch.build.targets.sdist]
# Keep virtualenvs, the Go submodule, and local cruft out of the source
# distribution (venv absolute symlinks make the sdist tar unbuildable).
exclude = [
  "/.smoke",
  "/.test-venv",
  "/skills-fs",
  "/dist",
  "/build",
  "/test_phone_tui.py",
  "/debug",
  "/keys.log",
  "/SKILLS_FS_DEGRADED",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
