[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "napcat-cli-fs"
version = "2.0.0"
description = "Pre-built skills-fs FUSE binary for napcat-cli"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
# No runtime Python dependencies — the package is a shipping vehicle for the
# compiled Go binary, which napcat-cli's SkillsFsManager discovers at runtime.